--- a/assets/estilos/SaSS/styles.css
+++ b/assets/estilos/SaSS/styles.css
@@ -839,6 +839,92 @@ h1 {
   justify-content: space-between;
   gap: 0px;
 }
+#contenedor #contenido .contenido__info .contenido__info--proyectos {
+  padding: 5svh 0 7svh;
+  margin: 1px 0 0;
+  background-color: #740000;
+}
+#contenedor #contenido .contenido__info .contenido__info--proyectos h3 {
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 14svw;
+  font-weight: 600;
+  color: #fff;
+  line-height: 1;
+  text-transform: uppercase;
+  display: block;
+  margin: 0 5% 5svh;
+}
+#contenedor #contenido .contenido__info .contenido__info--proyectos #carrousel-proyectos {
+  display: inline-block;
+}
+#contenedor #contenido .contenido__info .contenido__info--proyectos #carrousel-proyectos #proy-gal_mov .proy__gal--mov_img-gde-cont {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0px;
+  width: 100svw;
+}
+#contenedor #contenido .contenido__info .contenido__info--proyectos #carrousel-proyectos #proy-gal_mov .proy__gal--mov_img-gde-cont .gal__mov--btn {
+  display: inline-block;
+  text-align: center;
+  margin: 0 auto;
+  width: 10%;
+}
+#contenedor #contenido .contenido__info .contenido__info--proyectos #carrousel-proyectos #proy-gal_mov .proy__gal--mov_img-gde-cont .gal__mov--btn button {
+  z-index: 997;
+  color: #fff;
+  background: none;
+  padding: 3px;
+  cursor: pointer;
+}
+#contenedor #contenido .contenido__info .contenido__info--proyectos #carrousel-proyectos #proy-gal_mov .proy__gal--mov_img-gde-cont .gal__mov--btn button svg {
+  width: 3.72svh;
+  height: 3.72svh;
+  fill: #fff;
+  stroke: #fff;
+  stroke-width: 3px;
+  display: block;
+}
+#contenedor #contenido .contenido__info .contenido__info--proyectos #carrousel-proyectos #proy-gal_mov .proy__gal--mov_img-gde-cont .gal__mov--img_gde-slider_cont {
+  display: inline-block;
+  width: 80% !important;
+  overflow: hidden;
+}
+#contenedor #contenido .contenido__info .contenido__info--proyectos #carrousel-proyectos #proy-gal_mov .proy__gal--mov_img-gde-cont .gal__mov--img_gde-slider_cont #galeria-mov {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 0px;
+  transition: 0.5s ease all;
+}
+#contenedor #contenido .contenido__info .contenido__info--proyectos #carrousel-proyectos #proy-gal_mov .proy__gal--mov_img-gde-cont .gal__mov--img_gde-slider_cont #galeria-mov .gal-mov_slider--slide {
+  display: inline-block;
+  height: 100%;
+  cursor: pointer;
+}
+#contenedor #contenido .contenido__info .contenido__info--proyectos #carrousel-proyectos #proy-gal_mov .proy__gal--mov_img-gde-cont .gal__mov--img_gde-slider_cont #galeria-mov .gal-mov_slider--slide h4 {
+  font-family: "Urbanist", sans-serif;
+  font-size: 21px;
+  font-weight: 400;
+  color: #fff;
+  line-height: 1;
+  text-transform: uppercase;
+  margin: 0 0 1.5svh;
+}
+#contenedor #contenido .contenido__info .contenido__info--proyectos #carrousel-proyectos #proy-gal_mov .proy__gal--mov_img-gde-cont .gal__mov--img_gde-slider_cont #galeria-mov .gal-mov_slider--slide img {
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  border: 1px solid #14a341;
+}
+#contenedor #contenido .contenido__info .contenido__info--proyectos #carrousel-proyectos #proy-gal_mov .proy__gal--mov_img-gde-cont .gal__mov--img_gde-slider_cont #galeria-mov .gal-mov_slider--slide p {
+  font-family: "Urbanist", sans-serif;
+  font-size: 18px;
+  color: #fff;
+  font-weight: 500;
+}
 #contenedor #pie {
   display: flex;
   flex-flow: row wrap;
