--- a/assets/estilos/SaSS/_estruct.scss
+++ b/assets/estilos/SaSS/_estruct.scss
@@ -706,6 +706,58 @@
                     margin: 0 5% 5svh;
                 }
 
+                .contenido__info--proyectos_txt {
+                    opacity: 0;
+                    margin: 7svh 0 0;
+
+                    h5 {
+                        font-family: $fam_01;
+                        font-size: 11svw;
+                        font-weight: 500;
+                        color: map-get($color, "blanco");
+                        line-height: 1;
+                        text-transform: uppercase;
+                        display: block;
+                        margin: 0 5% 1svh;
+                        text-align: center;
+                    }
+    
+                    p {
+                        font-family: $fam_03;
+                        font-size: 4.8svw;
+                        color: map-get($color, "blanco");
+                        font-weight: 400;
+                        margin: 0 5%;
+                        text-align: justify;
+                    }
+
+                }
+
+                .contenido__info--proyectos_txt.animacion {
+                    // visibility: visible;
+                    animation: animacionProyectosTxt 2s forwards;
+
+                    @keyframes animacionProyectosTxt {
+
+                        0% {
+                            opacity: 0;
+                            padding-top: 50px;
+                        }
+
+                        100% {
+                            opacity: 1;
+                            padding-top: 0;
+                        }
+                        
+                    }
+                }
+
+                
+
+                // .contenido__info--proyectos_btn {
+
+                // }
+
                 #carrousel-proyectos {
                     display: inline-block;
 
@@ -718,6 +770,7 @@
                         .proy__gal--mov_img-gde-cont {
                             @include caja__flexible--edit ($flx_bx_ff: row nowrap, $flx_bx_alit: center, $flx_bx_juco: space-between, $flx_bx_gap: 0px);
                             width: 100svw;
+                            // margin: 0 0 7svh;
     
                             .gal__mov--btn {
                                 display: inline-block;
@@ -836,6 +889,8 @@
                                             font-size: 18px;
                                             color: map-get($color, "blanco");
                                             font-weight: 500;
+                                            text-align: left;
+                                            margin: 0;
                                         }
                         
                                     }
@@ -886,7 +941,7 @@
 
     #pie {
         @include caja__flexible--edit ($flx_bx_ff: row wrap, $flx_bx_alit: flex-start, $flx_bx_juco: space-evenly, $flx_bx_gap: 0px);
-        background-color: map-get($color, "gris_01");
+        background-color: map-get($color, "gris_18");
         padding: 5svh 5% 3svh;
 
         .pie__box {
@@ -894,6 +949,49 @@
             min-width: 90svw;
             
         }
+
+        .pie__marca {
+            @include caja__flexible--edit ($flx_bx_ff: row nowrap, $flx_bx_alit: center, $flx_bx_juco: space-between, $flx_bx_gap: 0px);
+            padding: 3px 5% 0;
+
+            .pie__marca--img {
+                flex-grow: 1;
+                display: inline-block;
+                width: 21%;
+                margin: 0 3svh 0 0;
+
+                img {
+                    width: 100%;
+                    object-fit: contain;
+                }
+            }
+
+            .pie__marca--txt {
+                display: inline-block;
+                flex-grow: 2;
+                // text-align: right;
+
+                .pie__marca--h1_01 {
+                    font-family: $fam_02;
+                    font-size: 12svw;
+                    // font-size: 9svw;
+                    font-weight: 100;
+                    color: map-get($color, "gris_05");
+                }
+                  
+                .pie__marca--h1_02 {
+                    font-family: $fam_01;
+                    font-size: 14.1svw;
+                    // font-size: 11.1svw;
+                    // letter-spacing: -1px;
+                    font-weight: 900;
+                    color: map-get($color, "gris_05");
+                }
+
+            }
+        }
+
+
 
     }
 
